<resources>
    <string name="app_name">Me Acode</string>
    <string name="title_activity_login">Entrar</string>
    <string name="title_activity_login_email">Entrar com email</string>
    <string name="facebook_app_id">525990551163753</string>
    <string name="fb_login_protocol_scheme">fb525990551163753</string>

    <!-- Strings related to login -->
    <string name="title_new_suggestion">Nova sugestão</string>
    <string name="title_login_email">Entrar com email e senha</string>
    <string name="prompt_suggestion_title">Título da Sugestão*</string>
    <string name="prompt_suggestion_email">Enviar resposta para (email):</string>
    <string name="prompt_suggestion_text">Texto*</string>
    <string name="prompt_suggestion_mandatory">Campos com asterisco são obrigatórios</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_finish">Finalizar</string>
    <string name="action_send">Enviar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar com email e senha</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="action_previous">Anterior</string>
    <string name="action_next">Próximo</string>
    <string name="error_no_title">É necessários escrever o título de sua sugestão.</string>
    <string name="error_no_message">É necessário escrever a mensagem de sua sugestão.</string>
    <string name="error_invalid_email_user">Endereço de email inválido</string>
    <string name="error_send_suggestion">Ocorreu um erro ao enviar sua sugestão. Por favor, tente novamente mais tarde.</string>
    <string name="error_invalid_email">Esse email é invaálido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha está incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_font_size_settings">Tamanho de letra</string>
    <string name="button_font_size_increase_settings">Aumentar</string>
    <string name="button_font_size_decrease_settings">Diminuir</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_intro">Como usar o app</string>
    <string name="action_settings">Ajustar tamanho de letra</string>
    <string name="action_forgot">Esqueci a senha</string>
    <string name="action_zoom_in">Zoom In</string>
    <string name="action_zoom_out">Zoom Out</string>
    <string name="action_close_menu">Fechar menu flutuante</string>
    <string name="action_logout">Sair</string>
    <string name="action_skip">Pular</string>
    <string name="action_restart">Início</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_home">Início</string>
    <string name="title_search">Procurar cursos</string>
    <string name="title_my_courses">Meus Cursos</string>
    <string name="title_my_profile">Meu Perfil</string>
    <string name="title_settings">Configurações</string>
    <string name="title_new_content">Sugerir Conteúdo</string>
    <string name="title_error">Isso é constrangedor&#8230;</string>
    <string name="title_error_user">Ops&#8230;</string>
    <string name="title_success">Sucesso</string>
    <string name="send_suggestion_success">Sua sugestão foi enviada aos devidos responsáveis. Caso seja aprovada, o curso será disponibilizado em nossa plataforma! :)</string>
    <string name="title_finish_course">Parabéns!</string>
    <string name="message_finish_course">Você acabou de finalizar um curso feito pensando em você. Caso tenha alguma sugestão de como podemos
    melhorar os cursos, vá em "Nova Sugestão" e deixe-nos uma mensagem :)</string>
    <string name="error_404_courses">"Não encontramos nenhum curso que bata com seus termos de pesquisa"</string>
    <string name="title_more">Mais</string>
    <string name="action_apply">APLICAR</string>

    <string name="title_loading">Carregando</string>
    <string name="message_loading">Aguarde mais alguns instantes&#8230;</string>

    <string name="content_useful">Este conteúdo foi útil?</string>
    <string name="course_rate">Parabéns por ter concluído este curso! Deixe uma avaliação sobre o que achou dele:</string>
    <string name="comments">Comentários</string>

    <string name="dislike_course">Não gostou do curso</string>
    <string name="like_course">Gostou do curso</string>

    <string name="rate_sent_title">Avaliação enviada</string>
    <string name="rate_sent_message">Sua avaliação foi enviada com sucesso, obrigado!</string>

    <string name="rate_sent_title_error">Avaliação enviada</string>
    <string name="rate_sent_message_error">Não conseguimos enviar sua avaliação :(
    Tente novamente mais tarde</string>

    <string name="dislike_content">Conteúdo não foi útil</string>
    <string name="like_content">Conteúdo foi útil</string>


    <string name="title_permission_request">Precisamos de sua atenção</string>
    <string name="text_permission_request">Antes de começar, precisamos que nos dê permissão para salvar um identificador do seu celular
    para guardarmos quais cursos você vai gostar ou não :)</string>

    <string name="title_size_option">Ajustar tamanho das letras</string>
    <string-array name="options_font_size">
        <item>Normal</item>
        <item>Grande</item>
    </string-array>

    <string name="title_size_normal">Normal</string>
    <string name="title_size_big">Grande</string>

    <string name="step1_title">Olá!</string>
    <string name="step1_text">Seja bem vindo ao Me Acode, seu centro de conteúdos para todas as horas.
        Deslize a tela para a esquerda ou toque nela para continuar esta introdução.</string>

    <string name="step_final_title">Agora você está pronto para começar!</string>
    <string name="step_final_text">Se desejar reiniciar o passo a passo, toque em "INÍCIO".
        Toque no botão da seta se desejar fechar o passo a passo.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
