<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.meacodeapp.meacodemobile.ui.activity.MainActivity">
    <item android:id="@+id/tlbr_zoom_in"
        android:orderInCategory="100"
        android:title="@string/action_zoom_in"
        android:icon="@drawable/ic_zoom_in_white_24dp"
        app:showAsAction="always"
        />
    <item android:id="@+id/tlbr_zoom_out"
        android:orderInCategory="200"
        android:title="@string/action_zoom_out"
        android:icon="@drawable/ic_zoom_out_white_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
