<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.NewSuggestionFragment">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="top|start|left">
        <android.support.v7.widget.Toolbar
            android:id="@+id/suggestion_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/title_new_suggestion"
                    android:textColor="@color/colorText"
                    android:textSize="21sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/suggestion_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_suggestion_title"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/suggestion_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_suggestion_text"
                android:inputType="textEmailAddress"
                android:singleLine="false" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/suggestion_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_send"/>
    </LinearLayout>

</FrameLayout>