<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.activity.ContentActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:background="@color/colorContentBackground"
            android:layout_height="match_parent"
            android:padding="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
                        <WebView
                            android:id="@+id/content_webview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                                <TextView
                                    android:textSize="18sp"
                                    android:id="@+id/useful_content"
                                    android:text="@string/content_useful"
                                    android:layout_width="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:gravity="left|start"
                                    android:layout_height="wrap_content" />
                                <LinearLayout
                                    android:orientation="horizontal"
                                    android:layout_gravity="right"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">
                                        <ImageButton
                                            android:id="@+id/dislike_content"
                                            android:layout_width="50dp"
                                            android:padding="4dp"
                                            android:scaleType="fitCenter"
                                            android:layout_marginRight="5dp"
                                            android:background="@color/colorSecondaryLight"
                                            android:src="@drawable/ic_dislike_red_24dp"
                                            android:layout_height="50dp" />
                                        <ImageButton
                                            android:id="@+id/like_content"
                                            android:src="@drawable/ic_like_green_24dp"
                                            android:layout_width="50dp"
                                            android:padding="4dp"
                                            android:background="@color/colorSecondaryLight"
                                            android:scaleType="fitCenter"
                                            android:layout_height="50dp" />
                                </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                                <android.support.v7.widget.AppCompatButton
                                    android:id="@+id/previous_content"
                                    android:layout_width="wrap_content"
                                    android:layout_weight="1"
                                    android:background="@color/colorPrimaryDark"
                                    android:text="@string/action_previous"
                                    android:layout_gravity="start|left|top"
                                    android:layout_marginRight="40dp"
                                    android:layout_height="wrap_content" />

                                <android.support.v7.widget.AppCompatButton
                                    android:id="@+id/next_content"
                                    android:layout_width="wrap_content"
                                    android:layout_weight="1"
                                    android:layout_marginLeft="40dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="end|right|bottom"
                                    android:background="@color/colorPrimaryDark"
                                    android:text="@string/action_next" />

                                <android.support.v7.widget.AppCompatButton
                                    android:id="@+id/go_home"
                                    android:layout_width="wrap_content"
                                    android:layout_weight="1"
                                    android:layout_marginLeft="40dp"
                                    android:visibility="gone"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="end|right|bottom"
                                    android:background="@color/colorSecondaryDark"
                                    android:text="@string/action_finish" />
                        </LinearLayout>
                </LinearLayout>
        </ScrollView>
    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/adjust_font"
        android:src="@drawable/ic_format_size_white_24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:layout_width="wrap_content"
        app:fab_colorNormal="@color/colorSecondaryDark"
        app:fab_colorPressed="@color/colorSecondary"
        app:fab_colorRipple="@color/colorSecondaryLight"
        android:layout_height="wrap_content" />
        </RelativeLayout>
