<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context="br.com.meacodeapp.meacodemobile.ui.fragment.HomeFragment"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:id="@+id/search_card"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/colorPrimaryDark">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">
                    <ImageView
                        android:id="@+id/search_card_image"
                        android:layout_centerVertical="true"
                        android:layout_width="50dp"
                        android:src="@drawable/ic_search_white_24dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_height="50dp" />

                    <TextView
                        android:id="@+id/search_card_text"
                        android:textSize="21sp"
                        android:layout_toRightOf="@+id/search_card_image"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/colorText"
                        android:text="@string/title_search"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/colorPrimaryDark">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">
                    <ImageView
                        android:id="@+id/my_courses_card_image"
                        android:layout_centerVertical="true"
                        android:layout_width="50dp"
                        android:src="@drawable/ic_list_white_24dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_height="50dp" />

                    <TextView
                        android:id="@+id/my_courses_card_text"
                        android:textSize="21sp"
                        android:layout_toRightOf="@+id/my_courses_card_image"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/colorText"
                        android:text="@string/title_my_courses"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/colorPrimaryDark">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">
                    <ImageView
                        android:id="@+id/my_profile_card_image"
                        android:layout_centerVertical="true"
                        android:layout_width="50dp"
                        android:src="@drawable/ic_account_circle_white_24dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_height="50dp" />

                    <TextView
                        android:id="@+id/my_profile_card_text"
                        android:textSize="21sp"
                        android:layout_toRightOf="@+id/my_profile_card_image"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/colorText"
                        android:text="@string/title_my_profile"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/colorPrimaryDark">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">
                    <ImageView
                        android:id="@+id/settings_card_image"
                        android:layout_centerVertical="true"
                        android:layout_width="50dp"
                        android:src="@drawable/ic_settings_white_24dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_height="50dp" />

                    <TextView
                        android:id="@+id/settings_card_text"
                        android:textSize="21sp"
                        android:layout_toRightOf="@+id/settings_card_image"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/colorText"
                        android:text="@string/title_settings"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/colorPrimary">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">
                    <ImageView
                        android:id="@+id/new_content_card_image"
                        android:layout_centerVertical="true"
                        android:layout_width="50dp"
                        android:src="@drawable/ic_info_outline_white_24dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_height="50dp" />

                    <TextView
                        android:id="@+id/new_content_card_text"
                        android:textSize="21sp"
                        android:layout_toRightOf="@+id/new_content_card_image"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/colorText"
                        android:text="@string/title_new_content"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/colorAccent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">
                    <ImageView
                        android:id="@+id/logout_card_image"
                        android:layout_centerVertical="true"
                        android:layout_width="50dp"
                        android:src="@drawable/ic_exit_to_app_white_24dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_height="50dp" />

                    <TextView
                        android:id="@+id/logout_card_text"
                        android:textSize="21sp"
                        android:layout_toRightOf="@+id/logout_card_image"
                        android:layout_toEndOf="@+id/logout_card_image"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:textColor="@color/colorText"
                        android:text="@string/action_logout"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>